--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "WebGL Time Series",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --mode production",
-    "start": "npx webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development",
+    "watch": "webpack --watch --mode development"
   },
   "author": "Marko Sanković <msankovic@synapticon.com> (https://github.com/markosankovic)",
   "license": "MIT",
@@ -17,9 +17,12 @@
   },
   "devDependencies": {
     "@types/pixi.js": "^4.7.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.1.0",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.2",
     "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
